data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1657.wast
;; 8. **Test Description**: Embed a `loop` inside a `block` followed by another `loop` outside the `block`. Place a `br_if` targeting the outer loop from inside the inner loop. Verify the control flow respects this complex nesting and correctly targets the outer loop.    - **Constraint Checked**: Correct resolution of nested loop and block boundaries.    - **Relation to Mismanagement of Block Nesting**: Conflicts in layer handling might cause unintended exits or loop continuing incorrectly.

(assert_malformed
  (module
    (func
      (block
        (loop
          (block
            (loop
              (br_if 1 (i32.const 1))
            )
          )
        )
      )
    )
  )
  "malformed nested block structure"
)